--- a/qanda_frontend/.env.example
+++ b/qanda_frontend/.env.example
@@ -1,4 +1,6 @@
-# Frontend environment variables
-# The orchestrator will populate .env; do not commit secrets.
-# Backend API base URL (must include trailing slash and /api)
+# PUBLIC_INTERFACE
+# REACT_APP_BACKEND_API_URL must include the /api/ suffix and a trailing slash.
+# Examples:
+#   Local Django dev server:   http://localhost:3001/api/
+#   Staging/Prod behind proxy: https://your-domain.example.com/api/
 REACT_APP_BACKEND_API_URL=http://localhost:3001/api/
