--- a/qanda_frontend/.env.example
+++ b/qanda_frontend/.env.example
@@ -1,6 +1,6 @@
 # PUBLIC_INTERFACE
-# REACT_APP_BACKEND_API_URL must include the /api/ suffix and a trailing slash.
-# Examples:
-#   Local Django dev server:   http://localhost:3001/api/
-#   Staging/Prod behind proxy: https://your-domain.example.com/api/
-REACT_APP_BACKEND_API_URL=http://localhost:3001/api/
+# Frontend environment configuration for Company Q&A.
+# Ensure this points to the backend API ROOT and ends with /api/
+# In deployed environments behind a reverse proxy, you can leave this unset and the app will use relative /api/.
+# For local dev with backend on 3001:
+REACT_APP_BACKEND_API_URL=https://localhost:3001/api/
