--- a/qanda_frontend/.env.example
+++ b/qanda_frontend/.env.example
@@ -1,6 +1,15 @@
-# PUBLIC_INTERFACE
-# Frontend environment configuration for Company Q&A.
-# Ensure this points to the backend API ROOT and ends with /api/
-# In deployed environments behind a reverse proxy, you can leave this unset and the app will use relative /api/.
-# For local dev with backend on 3001:
-REACT_APP_BACKEND_API_URL=https://localhost:3001/api/
+# Frontend environment variables for Company Q&A (React)
+# Copy this file to ".env" and adjust as needed. Do NOT commit your .env.
+
+# IMPORTANT:
+# - Must include protocol and end with /api/
+# - Use HTTPS in cloud previews (to avoid mixed content)
+# - Ensure it points to the actual backend deployment domain, not the frontend's
+# - Example local:
+# REACT_APP_BACKEND_API_URL=http://localhost:3001/api/
+#
+# Example cloud preview (replace with your actual backend preview host/port):
+# REACT_APP_BACKEND_API_URL=https://vscode-internal-18098-beta.beta01.cloud.kavia.ai:3001/api/
+
+# Uncomment and set to your backend API root:
+# REACT_APP_BACKEND_API_URL=
